<resources>
    <string name="app_name">Incoming Sms Forwarder</string>
    <string name="input_phone">08xxxx</string>
    <string name="input_url">https://contoh.com</string>
    <string name="btn_add">Tambah</string>
    <string name="btn_cancel">Batal</string>
    <string name="btn_delete">Hapus</string>
    <string name="delete_record">Hapus Alamat Webhook</string>
    <string name="key_phones_preference">phones</string>
    <string name="label_add_sender">Pengirim (angka / teks)</string>
    <string name="label_sender">Pengirirm</string>
    <string name="label_url">Webhook URL (POST)</string>
    <string name="hint_sender">angka atau teks</string>
    <string name="sender_recommendation">Gunakan simbol * untuk membaca semua SMS yang masuk</string>
    <string name="error_empty_sender">Belum ada pengirim</string>
    <string name="error_empty_url">URL Kososng</string>
    <string name="error_wrong_url">URL Salah!</string>
    <string name="asterisk">*</string>
    <string name="any">Semua pesan masuk</string>
    <string name="confirm_delete">Yakin mau hapus "%s" ?</string>
</resources>
