<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_add"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5A5959"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:labelFor="@+id/input_phone"
        android:text="@string/label_add_sender"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:hapticFeedbackEnabled="true"
        android:hint="@string/hint_sender"
        android:inputType="text"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="-4dp"
        android:text="@string/sender_recommendation"
        android:textColor="@android:color/white"
        android:textSize="10sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:labelFor="@+id/input_phone"
        android:text="@string/label_url"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/input_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/input_url"
        android:inputType="textUri"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray" />
</LinearLayout>